feat: implement full-stack timetable management system with scheduling algorithms and curriculum roadmap support